--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask-sqlalchemy = "^3.0.3"
 psycopg2 = "^2.9.5"
 python-dotenv = "^0.21.1"
 invoke = "^2.0.0"
+gunicorn = "^20.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
